# mkgp2-view

./: .gitignore  CLAUDE.md  Cargo.toml
mkgp2docs/: mkgp2_ai_item_suppression.md  mkgp2_ai_pathfinding.md  mkgp2_analysis_technical_flag.md  mkgp2_biribiri_land.md  mkgp2_biribiri_land_detail.md  mkgp2_card_schema_analysis.md  mkgp2_cgamecoin_kp_challenge.md  mkgp2_characters_and_karts.md  mkgp2_coin_challenge_mode.md  mkgp2_coin_run_jump.md  mkgp2_coin_run_mode.md  mkgp2_coin_speed_analysis.md  mkgp2_coin_speed_mechanism.md  mkgp2_frame_selection_ui.md  mkgp2_kart_params.md  mkgp2_kart_params_physics_usage.md  mkgp2_kart_task_analysis.md  mkgp2_kart_tuning_entry_fields.md  mkgp2_kart_tuning_table.md  mkgp2_kart_type_enum_analysis.md  mkgp2_kart_variant_xrefs.md  mkgp2_kart_weight_field.md  mkgp2_lap_speed_bonus.md  mkgp2_main_dol.md  mkgp2_minigame_cup_mapping.md  mkgp2_network_test_ppc_analysis.md  mkgp2_network_test_understanding.md  mkgp2_nokonoko_challenge.md  mkgp2_reverse_challenge.md  mkgp2_rival_run_mode.md  mkgp2_speed_curve_dataflow.md  mkgp2_start_dash_system.md  mkgp2_suikaball_minigame.md  mkgp2_tachometer_system.md  mkgp2_test_drive_mode.md  mkgp2_timetrial_mode.md  mkgp2_title_check_functions.md  mkgp2_title_check_functions_v2.md  mkgp2_warp_gate_system.md
src/: dolphin.rs  main.rs  mcp_server.rs  ppc_regs.rs
